# uuasm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.wasm  example.wat  example2.wasm  example2.wat  example3.wasm  example3.wat  foo.wasm  gentest.py  justfile  spectest.wasm  spectest.wat
corpus/: example.wat  example2.wat  foo.wat  test.wat
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codec/: Cargo.toml  justfile  test.wasm
crates/codec/benches/: bench.rs
crates/codec/src/: decoder.rs  lib.rs  original.rs  parse.rs  window.rs
crates/codec/src/parser/: accumulator.rs  any.rs  block.rs  block_ifelse.rs  blocktype.rs  bytevec.rs  code.rs  custom_section.rs  data.rs  elem.rs  export.rs  exportdesc.rs  expr.rs  func.rs  func_idxs.rs  global.rs  global_idxs.rs  globaltype.rs  importdescs.rs  imports.rs  instr.rs  instrarg_multibyte.rs  instrarg_refnull.rs  instrarg_select.rs  instrarg_table.rs  leb.rs  limits.rs  local.rs  mem_idxs.rs  memtype.rs  mod.rs  module.rs  names.rs  repeated.rs  section.rs  state.rs  table_idxs.rs  tabletype.rs  take.rs  type_idxs.rs  (+1 more)
crates/ir/: Cargo.toml  test.wat
crates/ir/src/: defs.rs  lib.rs  typechecker.rs
crates/ir/src/irgen/: default.rs  empty.rs  mod.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: lib.rs
crates/rt/: Cargo.toml  justfile
crates/rt/benches/: bench.rs
crates/rt/src/: function.rs  global.rs  imports.rs  instance.rs  intern_map.rs  lib.rs  locals.rs  machine.rs  memory.rs  memory_region.rs  stack.rs  table.rs  test_utils.rs  value.rs
crates/wastjson-gen/: Cargo.toml
crates/wastjson-gen/src/: main.rs
src/: lib.rs  memory_region.rs  nodes.rs  parse.rs  parser2.rs  rt.rs  test_utils.rs
src/rt/: function.rs  global.rs  imports.rs  instance.rs  machine.rs  memory.rs  module.rs  table.rs  value.rs
