[workspace]
members = ["crates/codec", "crates/nodes", "crates/rt", "crates/wastjson-gen"]
resolver = "2"

[package]
name = "uuasm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
uuasm-nodes = { version = "0.1.0", path = "crates/nodes" }
uuasm-codec = { version = "0.1.0", path = "crates/codec" }
anyhow = "1.0.75"
thiserror = "1.0.61"

[dependencies]
leb128 = "0.2.5"
nom = "7.1.3"
nom_locate = "4.2.0"
num = "0.4.3"
scopeguard = "1.2.0"
divrem = "1.0.0"

[dev-dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
