[package]
name = "uuasm-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
divrem = "1.0.0"
leb128 = "0.2.5"
nom = "7.1.3"
nom_locate = "4.2.0"
num = "0.4.3"
paste = "1.0.15"
thiserror = { workspace = true }
uuasm-nodes = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
wasmparser = "0.214.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
