[package]
name = "uuasm-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
num = "0.4.3"
thiserror = { workspace = true }
uuasm-ir = { workspace = true }
uuasm-codec = { workspace = true }
serde_json = "1.0.122"
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
